tests/rosetta/out/Smalltalk/amicable-pairs.out
/workspace/mochi/tests/rosetta/out/Smalltalk/amicable-pairs.st:20: parse error, expected '|' or identifier
