tests/rosetta/out/Smalltalk/amicable-pairs.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| i m main n p pad pfacSum s sum sums |
pfacSum := [:i | sum := 0.
p := 1.
[(p <= (i / 2))] whileTrue: [
  (((i % p) = 0)) ifTrue: [
    sum := (sum + p).
  ] .
  p := (p + 1).
]
.
sum ].
pad := [:n :width | s := (n asString).
[((s size) < width)] whileTrue: [
  s := (' ' + s).
]
.
s ].
main := [ | sums := {}.
i := 0.
[(i < 20000)] whileTrue: [
  sums := sums copyWith: 0.
  i := (i + 1).
]
.
i := 1.
[(i < 20000)] whileTrue: [
  sums at: i put: pfacSum value: i.
  i := (i + 1).
]
.
Transcript show: 'The amicable pairs below 20,000 are:'; cr.
n := 2.
[(n < 19999)] whileTrue: [
  m := sums at: n.
  ((((m > n) and: [(m < 20000)]) and: [(n = sums at: m)])) ifTrue: [
    Transcript show: (((('  ' + pad value: n value: 5) + ' and ') + pad value: m value: 5)) printString; cr.
  ] .
  n := (n + 1).
]
. ].
main value.
